sofa-platform/src/main/cpp/src/sofa.h

/* Astronomy/Calendars */
SOFAExport int    iauCal2jd(int iy, int im, int id, double *djm0, double *djm);
SOFAExport double iauEpb(double dj1, double dj2);
SOFAExport void   iauEpb2jd(double epb, double *djm0, double *djm);
SOFAExport double iauEpj(double dj1, double dj2);
SOFAExport void   iauEpj2jd(double epj, double *djm0, double *djm);
SOFAExport int    iauJd2cal(double dj1, double dj2, int *iy, int *im, int *id, double *fd);
SOFAExport int    iauJdcalf(int ndp, double dj1, double dj2, int iymdf[4]);
/* Astronomy/Ephemerides */
SOFAExport int iauEpv00(double date1, double date2, double pvh[2][3], double pvb[2][3]);
SOFAExport int iauPlan94(double date1, double date2, int np, double pv[2][3]);
/* Astronomy/FundamentalArgs */
SOFAExport double iauFad03(double t);
SOFAExport double iauFae03(double t);
SOFAExport double iauFaf03(double t);
SOFAExport double iauFaju03(double t);
SOFAExport double iauFal03(double t);
SOFAExport double iauFalp03(double t);
SOFAExport double iauFama03(double t);
SOFAExport double iauFame03(double t);
SOFAExport double iauFane03(double t);
SOFAExport double iauFaom03(double t);
SOFAExport double iauFapa03(double t);
SOFAExport double iauFasa03(double t);
SOFAExport double iauFaur03(double t);
SOFAExport double iauFave03(double t);
/* Astronomy/PrecNutPolar */
SOFAExport void iauBi00(double *dpsibi, double *depsbi, double *dra);
SOFAExport void iauBp00(double date1, double date2, double rb[3][3], double rp[3][3], double rbp[3][3]);
SOFAExport void iauBp06(double date1, double date2, double rb[3][3], double rp[3][3], double rbp[3][3]);