sofa/src/main/java/be/angelcorp/sofa/SofaLibrary.java

package be.angelcorp.sofa;
import org.bridj.BridJ;
import org.bridj.CRuntime;
import org.bridj.Pointer;
import org.bridj.ann.Library;
import org.bridj.ann.Ptr;
import org.bridj.ann.Runtime;
/**
 * Wrapper for library <b>sofa</b><br>
 * This file was autogenerated by <a href="http://jnaerator.googlecode.com/">JNAerator</a>,<br>
 * a tool written by <a href="http://ochafik.com/">Olivier Chafik</a> that <a href="http://code.google.com/p/jnaerator/wiki/CreditsAndLicense">uses a few opensource projects.</a>.<br>
 * For help, please visit <a href="http://nativelibs4java.googlecode.com/">NativeLibs4Java</a> or <a href="http://bridj.googlecode.com/">BridJ</a> .
 */
@Library("sofa") 
@Runtime(CRuntime.class) 
public class SofaLibrary {
	static {
		BridJ.register();
	}
	/// <i>native declaration : src\main\cpp\sofa\src\sofam.h</i>
	public static final int WGS72 = (int)3;
	/// <i>native declaration : src\main\cpp\sofa\src\sofam.h</i>
	public static final double DAS2R = (double)(4.848136811095359935899141e-6);
	/// <i>native declaration : src\main\cpp\sofa\src\sofam.h</i>
	public static final double DJM = (double)(365250.0);
	/// <i>native declaration : src\main\cpp\sofa\src\sofam.h</i>
	public static final double DAU = (double)(149597870e3);
	/// <i>native declaration : src\main\cpp\sofa\src\sofam.h</i>
	public static final double TTMTAI = (double)(32.184);
	/// <i>native declaration : src\main\cpp\sofa\src\sofam.h</i>
	public static final double DJY = (double)(365.25);
	/// <i>native declaration : src\main\cpp\sofa\src\sofam.h</i>
	public static final double DJM77 = (double)(43144.0);
	/// <i>native declaration : src\main\cpp\sofa\src\sofam.h</i>
	public static final int WGS84 = (int)1;
	/// <i>native declaration : src\main\cpp\sofa\src\sofam.h</i>
	public static final double DPI = (double)(3.141592653589793238462643);
	/// <i>native declaration : src\main\cpp\sofa\src\sofam.h</i>
	public static final double DD2R = (double)(1.745329251994329576923691e-2);
	/// <i>native declaration : src\main\cpp\sofa\src\sofam.h</i>
	public static final double D2PI = (double)(6.283185307179586476925287);
	/// <i>native declaration : src\main\cpp\sofa\src\sofam.h</i>
	public static final double ELB = (double)(1.550519768e-8);
	/// <i>native declaration : src\main\cpp\sofa\src\sofam.h</i>
	public static final double DJM0 = (double)(2400000.5);
	/// <i>native declaration : src\main\cpp\sofa\src\sofam.h</i>
	public static final double DS2R = (double)(7.272205216643039903848712e-5);
	/// <i>native declaration : src\main\cpp\sofa\src\sofam.h</i>
	public static final double ELG = (double)(6.969290134e-10);
	/// <i>native declaration : src\main\cpp\sofa\src\sofam.h</i>
	public static final double TDB0 = (double)(-6.55e-5);
	/// <i>native declaration : src\main\cpp\sofa\src\sofam.h</i>
	public static final double TURNAS = (double)(1296000.0);
	/// <i>native declaration : src\main\cpp\sofa\src\sofam.h</i>
	public static final double DTY = (double)(365.242198781);
	/// <i>native declaration : src\main\cpp\sofa\src\sofam.h</i>
	public static final double DAYSEC = (double)(86400.0);
	/// <i>native declaration : src\main\cpp\sofa\src\sofam.h</i>
	public static final double DC = (double)((86400.0) / 499.004782);
	/// <i>native declaration : src\main\cpp\sofa\src\sofam.h</i>
	public static final double DJM00 = (double)(51544.5);
	/// <i>native declaration : src\main\cpp\sofa\src\sofam.h</i>
	public static final double DR2AS = (double)(206264.8062470963551564734);
	/// <i>native declaration : src\main\cpp\sofa\src\sofam.h</i>
	public static final int GRS80 = (int)2;
	/// <i>native declaration : src\main\cpp\sofa\src\sofam.h</i>
	public static final double DMAS2R = (double)((4.848136811095359935899141e-6) / 1e3);
	/// <i>native declaration : src\main\cpp\sofa\src\sofam.h</i>
	public static final double DJ00 = (double)(2451545.0);
	/// <i>native declaration : src\main\cpp\sofa\src\sofam.h</i>
	public static final double DJC = (double)(36525.0);
	/**
	 * Astronomy/Calendars<br>
	 * Original signature : <code>int iauCal2jd(int, int, int, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:4</i>
	 */
	public static int iauCal2jd(int iy, int im, int id, Pointer<Double > djm0, Pointer<Double > djm) {
		return iauCal2jd(iy, im, id, Pointer.getPeer(djm0), Pointer.getPeer(djm));
	}
	protected native static int iauCal2jd(int iy, int im, int id, @Ptr long djm0, @Ptr long djm);
	/**
	 * Original signature : <code>double iauEpb(double, double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:6</i>
	 */
	native public static double iauEpb(double dj1, double dj2);
	/**
	 * Original signature : <code>void iauEpb2jd(double, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:8</i>
	 */
	public static void iauEpb2jd(double epb, Pointer<Double > djm0, Pointer<Double > djm) {
		iauEpb2jd(epb, Pointer.getPeer(djm0), Pointer.getPeer(djm));
	}
	protected native static void iauEpb2jd(double epb, @Ptr long djm0, @Ptr long djm);
	/**
	 * Original signature : <code>double iauEpj(double, double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:10</i>
	 */
	native public static double iauEpj(double dj1, double dj2);
	/**
	 * Original signature : <code>void iauEpj2jd(double, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:12</i>
	 */
	public static void iauEpj2jd(double epj, Pointer<Double > djm0, Pointer<Double > djm) {
		iauEpj2jd(epj, Pointer.getPeer(djm0), Pointer.getPeer(djm));
	}
	protected native static void iauEpj2jd(double epj, @Ptr long djm0, @Ptr long djm);
	/**
	 * Original signature : <code>int iauJd2cal(double, double, int*, int*, int*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:14</i>
	 */
	public static int iauJd2cal(double dj1, double dj2, Pointer<Integer > iy, Pointer<Integer > im, Pointer<Integer > id, Pointer<Double > fd) {
		return iauJd2cal(dj1, dj2, Pointer.getPeer(iy), Pointer.getPeer(im), Pointer.getPeer(id), Pointer.getPeer(fd));
	}
	protected native static int iauJd2cal(double dj1, double dj2, @Ptr long iy, @Ptr long im, @Ptr long id, @Ptr long fd);
	/**
	 * Original signature : <code>int iauJdcalf(int, double, double, int[4])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:16</i>
	 */
	public static int iauJdcalf(int ndp, double dj1, double dj2, Pointer<Integer > iymdf) {
		return iauJdcalf(ndp, dj1, dj2, Pointer.getPeer(iymdf));
	}
	protected native static int iauJdcalf(int ndp, double dj1, double dj2, @Ptr long iymdf);
	/**
	 * Astronomy/Ephemerides<br>
	 * Original signature : <code>int iauEpv00(double, double, double[2][3], double[2][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:21</i>
	 */
	public static int iauEpv00(double date1, double date2, Pointer<Double > pvh, Pointer<Double > pvb) {
		return iauEpv00(date1, date2, Pointer.getPeer(pvh), Pointer.getPeer(pvb));
	}
	protected native static int iauEpv00(double date1, double date2, @Ptr long pvh, @Ptr long pvb);
	/**
	 * Original signature : <code>int iauPlan94(double, double, int, double[2][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:23</i>
	 */
	public static int iauPlan94(double date1, double date2, int np, Pointer<Double > pv) {
		return iauPlan94(date1, date2, np, Pointer.getPeer(pv));
	}
	protected native static int iauPlan94(double date1, double date2, int np, @Ptr long pv);
	/**
	 * Astronomy/FundamentalArgs<br>
	 * Original signature : <code>double iauFad03(double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:28</i>
	 */
	native public static double iauFad03(double t);
	/**
	 * Original signature : <code>double iauFae03(double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:30</i>
	 */
	native public static double iauFae03(double t);
	/**
	 * Original signature : <code>double iauFaf03(double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:32</i>
	 */
	native public static double iauFaf03(double t);
	/**
	 * Original signature : <code>double iauFaju03(double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:34</i>
	 */
	native public static double iauFaju03(double t);
	/**
	 * Original signature : <code>double iauFal03(double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:36</i>
	 */
	native public static double iauFal03(double t);
	/**
	 * Original signature : <code>double iauFalp03(double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:38</i>
	 */
	native public static double iauFalp03(double t);
	/**
	 * Original signature : <code>double iauFama03(double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:40</i>
	 */
	native public static double iauFama03(double t);
	/**
	 * Original signature : <code>double iauFame03(double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:42</i>
	 */
	native public static double iauFame03(double t);
	/**
	 * Original signature : <code>double iauFane03(double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:44</i>
	 */
	native public static double iauFane03(double t);
	/**
	 * Original signature : <code>double iauFaom03(double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:46</i>
	 */
	native public static double iauFaom03(double t);
	/**
	 * Original signature : <code>double iauFapa03(double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:48</i>
	 */
	native public static double iauFapa03(double t);
	/**
	 * Original signature : <code>double iauFasa03(double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:50</i>
	 */
	native public static double iauFasa03(double t);
	/**
	 * Original signature : <code>double iauFaur03(double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:52</i>
	 */
	native public static double iauFaur03(double t);
	/**
	 * Original signature : <code>double iauFave03(double)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:54</i>
	 */
	native public static double iauFave03(double t);
	/**
	 * Astronomy/PrecNutPolar<br>
	 * Original signature : <code>void iauBi00(double*, double*, double*)</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:59</i>
	 */
	public static void iauBi00(Pointer<Double > dpsibi, Pointer<Double > depsbi, Pointer<Double > dra) {
		iauBi00(Pointer.getPeer(dpsibi), Pointer.getPeer(depsbi), Pointer.getPeer(dra));
	}
	protected native static void iauBi00(@Ptr long dpsibi, @Ptr long depsbi, @Ptr long dra);
	/**
	 * Original signature : <code>void iauBp00(double, double, double[3][3], double[3][3], double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:61</i>
	 */
	public static void iauBp00(double date1, double date2, Pointer<Double > rb, Pointer<Double > rp, Pointer<Double > rbp) {
		iauBp00(date1, date2, Pointer.getPeer(rb), Pointer.getPeer(rp), Pointer.getPeer(rbp));
	}
	protected native static void iauBp00(double date1, double date2, @Ptr long rb, @Ptr long rp, @Ptr long rbp);
	/**
	 * Original signature : <code>void iauBp06(double, double, double[3][3], double[3][3], double[3][3])</code><br>
	 * <i>native declaration : src\main\cpp\sofa\src\sofa.h:63</i>
	 */
	public static void iauBp06(double date1, double date2, Pointer<Double > rb, Pointer<Double > rp, Pointer<Double > rbp) {
		iauBp06(date1, date2, Pointer.getPeer(rb), Pointer.getPeer(rp), Pointer.getPeer(rbp));
	}
	protected native static void iauBp06(double date1, double date2, @Ptr long rb, @Ptr long rp, @Ptr long rbp);
